--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,26 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
+    # 准备发布的tag
+    - name: prepare tag
+      id: prepare_tag
+      run: |
+        TAGSTAMP=$(date +'%Y.%m.%dv2')-${RUNNER_OS}
+        echo "TAG=$TAGSTAMP" >> $GITHUB_OUTPUT
+      env:
+        RUNNER_OS: ${{ runner.os }}
+
+    - name: Create Release
+      id: create_release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tag_name: ${{  steps.prepare_tag.outputs.TAG }}
+        release_name: Release ${{  steps.prepare_tag.outputs.TAG }}
+        draft: false
+        prerelease: false
+
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
@@ -38,34 +58,7 @@ jobs:
       run: |
         pyinstaller --onefile --name rebuild_epub 重构epub为规范格式_v2.8.3.py
     
-    # 准备发布的tag
-    - name: prepare tag
-      id: prepare_tag
-      run: |
-        echo ::set-output name=TAG::$(date +'%Y.%m.%dv1')-${{ runner.os }}
-
-    - name: Check if release exists
-      id: check_release
-      
-      run: |
-        response=$(curl --silent --show-error --header 'Authorization: token ${{ secrets.GITHUB_TOKEN }}' https://api.github.com/repos/${{ github.repository }}/releases/tags/${{ steps.prepare_tag.outputs.TAG }})
-        exists=$(echo $response | jq '.url != null')
-        echo "::set-output name=exists::$exists"
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-    - name: Create Release
-      id: create_release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        tag_name: ${{  steps.prepare_tag.outputs.TAG }}
-        release_name: Release ${{  steps.prepare_tag.outputs.TAG }}
-        draft: false
-        prerelease: false
-      if : steps.check_release.outputs.exists == 'false'
-
+    # 上传到release
     - name: Upload Release Asset
       id: upload-release-asset-decrypt_epub
       uses: actions/upload-release-asset@v1
