更新说明文档，发布2024.06.12v1

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ on:
     inputs:
       release:
         description: 'Create a new release'
-        required: false
+        required: true
         default: 'false'
       version:
         description: 'Release version'
