更新说明文档，发布2024.06.12v1

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,8 +9,8 @@ on:
     inputs:
       release:
         description: 'Create a new release'
-        required: true
-        default: 'false'
+        required: false
+        default: 'ture'
       version:
         description: 'Release version'
         required: false
