--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,10 +7,6 @@ on:
       - '**.yml'
   workflow_dispatch:
     inputs:
-      release:
-        description: 'Create a new release'
-        required: false
-        default: 'true'
       version:
         description: 'Release version'
         required: false
@@ -51,7 +47,6 @@ jobs:
         pyinstaller --onefile --name rebuild_epub 重构epub为规范格式_v2.8.3.py
 
     - name: Upload the decrypt_epub executable
-      if: github.event.inputs.release != 'true'
       uses: actions/upload-artifact@v4
       with:
         name: ${{ runner.os }}-decrypt_epub
@@ -59,7 +54,6 @@ jobs:
         if-no-files-found: warn
 
     - name: Upload the encrypt_epub executable
-      if: github.event.inputs.release != 'true'
       uses: actions/upload-artifact@v4
       with:
         name: ${{ runner.os }}-encrypt_epub
@@ -67,7 +61,6 @@ jobs:
         if-no-files-found: warn
 
     - name: Upload the rebuild_epub executable
-      if: github.event.inputs.release != 'true'
       uses: actions/upload-artifact@v4
       with:
         name: ${{ runner.os }}-rebuild_epub
@@ -75,14 +68,13 @@ jobs:
         if-no-files-found: warn
 
     - name: Upload all executables
-      if: github.event.inputs.release != 'true'
       uses: actions/upload-artifact@v4
       with:
         name: ${{ runner.os }}-all
         path: dist/*
 
     - name: Rename artifacts with OS prefix (Linux and macOS)
-      if: github.event.inputs.release == 'true' && matrix.os != 'windows-latest'
+      if: matrix.os != 'windows-latest'
       run: |
         for file in dist/*; do
           mv "$file" "dist/${{ runner.os }}_$(basename "$file")"
@@ -90,13 +82,12 @@ jobs:
       shell: bash
 
     - name: Rename artifacts with OS prefix (Windows)
-      if: github.event.inputs.release == 'true' && matrix.os == 'windows-latest'
+      if: matrix.os == 'windows-latest'
       run: |
         Get-ChildItem -Path dist | Rename-Item -NewName { '${{ runner.os }}_' + $_.Name }
       shell: pwsh
 
     - name: Create Release
-      if: github.event.inputs.release == 'true'
       uses: ncipollo/release-action@v1
       with:
         tag: ${{ github.event.inputs.version }}
@@ -105,3 +96,4 @@ jobs:
         artifacts: 'dist/*'
         allowUpdates: true
         makeLatest: true
+
