--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ on:
     inputs:
       release:
         description: 'Create a new release'
-        required: false
+        required: true
         default: 'false'
         type: boolean
       version:
@@ -134,7 +134,6 @@ jobs:
         artifacts: 'dist/*'
         allowUpdates: true
         makeLatest: true
-      shell: pwsh
     
     - name: Create Release unix
       if: matrix.os != 'windows-latest'
@@ -146,4 +145,3 @@ jobs:
         artifacts: 'dist/*'
         allowUpdates: true
         makeLatest: true
-      shell: bash
